--- a/products.html
+++ b/products.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Zam Zam Bakery</title>
+  <title>Grace Bakery</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body style=" background-image: none;">
