Changed image type

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body style=" background-image: none;">
   <header>
     <div class="header-content">
-      <img class="logo" src="Images/logo.PNG" alt="Logo" class="prod-img">
+      <img class="logo" src="Images/logo.png" alt="Logo" class="prod-img">
       <a href="index.html">Home</a>
       <a href="products.html">Products</a>
       <a href="#">About Us</a>
