--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div class="header-content">
-      <img class="logo" src="Images/logo.PNG" alt="Logo" class="prod-img">
+      <img class="logo" src="Images/logo.png" alt="Logo" class="prod-img">
       <a href="#">Home</a>
       <a href="products.html">Products</a>
       <a href="#">About Us</a>
